--- a/plugin.xml
+++ b/plugin.xml
@@ -1,31 +1,109 @@
 <root>
-   <name>Global Search Enhancer</name>
-   <key>globalsearch</key>
-   <state>stable</state>
+	<name>Global Search Enhancer</name>
+	<key>globalsearch</key>
 
-   <version>1.4.1</version>
-   <author>Juan Carlos Acosta Perabá</author>
-   <homepage>https://github.com/JuanCarlosAcostaPeraba</homepage>
-   <license>GPLv3+</license>
+	<!-- stable | unstable | beta | alpha -->
+	<state>stable</state>
 
-   <compatibility>
-      <glpi min="10.0.0" max="10.0.99" />
-   </compatibility>
+	<!-- 40x40px or bigger. Marketplace will resize it. -->
+	<logo>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/logo.png</logo>
 
-   <description>
-      <short>
-         <en>Custom global search engine for GLPI.</en>
-         <es_ES>Motor de búsqueda global personalizado para GLPI.</es_ES>
-      </short>
-      <long>
-         <en>
-            Replaces GLPI default global search with a custom engine that queries the database directly,
-            including closed tickets and resolved projects, with full control over filters and ranking.
-         </en>
-         <es_ES>
-            Sustituye la búsqueda global por defecto de GLPI por un motor propio que consulta la base de datos
-            directamente, incluyendo tickets cerrados y proyectos resueltos, con control total sobre filtros y ordenación.
-         </es_ES>
-      </long>
-   </description>
+	<description>
+		<short>
+			<en>Enhanced global search engine for GLPI with multi-word support and configurable filters.</en>
+			<es_ES>Motor de búsqueda global mejorado para GLPI con soporte multi-palabra y filtros configurables.</es_ES>
+		</short>
+		<long>
+			<en><![CDATA[
+**Global Search Enhancer** replaces GLPI's default global search with a powerful custom engine.
+
+Key features:
+
+- **Multi-word "Google-style" search** - find items containing ALL specified words
+- **Search in closed/resolved items** - includes closed tickets and resolved projects
+- **7 searchable item types**: Tickets, Projects, Documents, Software, Users, Ticket Tasks, Project Tasks
+- **Configurable filters** - enable/disable search per item type via admin panel
+- **Smart ID search** - numeric queries search directly by ID
+- **Entity-aware** - respects GLPI's entity permissions
+- **Results ranked by modification date** for better relevance
+
+Designed to improve daily search efficiency in IT service management.
+
+Developed for real-world usage at the **Hospital Universitario de Canarias (HUC)**.
+			]]></en>
+
+			<es_ES><![CDATA[
+**Global Search Enhancer** sustituye la búsqueda global por defecto de GLPI por un motor potente personalizado.
+
+Características principales:
+
+- **Búsqueda multi-palabra "estilo Google"** - encuentra elementos que contengan TODAS las palabras
+- **Búsqueda en elementos cerrados/resueltos** - incluye tickets cerrados y proyectos resueltos
+- **7 tipos de elementos buscables**: Tickets, Proyectos, Documentos, Software, Usuarios, Tareas de Tickets, Tareas de Proyectos
+- **Filtros configurables** - activa/desactiva búsqueda por tipo desde el panel de administración
+- **Búsqueda inteligente por ID** - las consultas numéricas buscan directamente por ID
+- **Respeta entidades** - cumple con los permisos de entidades de GLPI
+- **Resultados ordenados por fecha de modificación** para mejor relevancia
+
+Diseñado para mejorar la eficiencia de búsqueda diaria en gestión de servicios IT.
+
+Desarrollado para uso real en el **Hospital Universitario de Canarias (HUC)**.
+			]]></es_ES>
+		</long>
+	</description>
+
+	<homepage>https://github.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin</homepage>
+
+	<download>https://github.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/releases</download>
+	<issues>https://github.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/issues</issues>
+	<readme>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/README.md</readme>
+
+	<authors>
+		<author>Juan Carlos Acosta Perabá</author>
+	</authors>
+
+	<versions>
+		<version>
+			<num>1.4.1</num>
+			<compatibility>~10.0.0</compatibility>
+			<download_url>https://github.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/releases/download/v1.4.1/globalsearch-1.4.1.zip</download_url>
+		</version>
+	</versions>
+
+	<langs>
+		<lang>en_GB</lang>
+		<lang>es_ES</lang>
+	</langs>
+
+	<license>GPL v3+</license>
+
+	<tags>
+		<en>
+			<tag>search</tag>
+			<tag>global search</tag>
+			<tag>tickets</tag>
+			<tag>projects</tag>
+			<tag>enhancement</tag>
+			<tag>glpi</tag>
+			<tag>plugin</tag>
+		</en>
+		<es_ES>
+			<tag>búsqueda</tag>
+			<tag>búsqueda global</tag>
+			<tag>tickets</tag>
+			<tag>proyectos</tag>
+			<tag>mejora</tag>
+			<tag>glpi</tag>
+			<tag>plugin</tag>
+		</es_ES>
+	</tags>
+
+	<screenshots>
+		<screenshot>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/screenshots/search-button.png</screenshot>
+		<screenshot>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/screenshots/search-modal.png</screenshot>
+		<screenshot>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/screenshots/search-searching.png</screenshot>
+		<screenshot>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/screenshots/search-results.png</screenshot>
+		<screenshot>https://raw.githubusercontent.com/JuanCarlosAcostaPeraba/glpi-globalsearch-plugin/main/assets/screenshots/config-panel.png</screenshot>
+	</screenshots>
+
 </root>
